[gd_scene load_steps=13 format=3 uid="uid://dccsqo6qcsi4c"]

[ext_resource type="Script" path="res://Scripts/StateMachine.gd" id="1"]
[ext_resource type="Script" path="res://Scripts/PlayerState.gd" id="2"]
[ext_resource type="PackedScene" path="res://Scenes/Participant.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://c1kfv70bbq0vr" path="res://Images/UI/roll_btn.png" id="4"]
[ext_resource type="Script" path="res://Scripts/Game.gd" id="5"]
[ext_resource type="PackedScene" path="res://Scenes/Dice.tscn" id="6"]
[ext_resource type="FontFile" uid="uid://dph2m4y4oast" path="res://Fonts/Theme.tres" id="7"]
[ext_resource type="Texture2D" uid="uid://b4db2ue7dknmm" path="res://Images/UI/end_turn_btn.png" id="8"]
[ext_resource type="Shortcut" path="res://ShortCuts/GeneralInput.tres" id="9"]
[ext_resource type="Script" path="res://Scripts/Bot1State.gd" id="10"]
[ext_resource type="Script" path="res://Scripts/Bot2State.gd" id="11"]

[sub_resource type="Theme" id="3"]
default_font = ExtResource("7")

[node name="Game" type="Node2D"]
script = ExtResource("5")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 1920.0
color = Color(0.552941, 0.552941, 0.552941, 1)

[node name="ActivePlayerLabel" type="Label" parent="."]
offset_left = 328.0
offset_top = 504.0
offset_right = 753.0
offset_bottom = 668.0
theme = SubResource("3")
text = "Test"

[node name="RollButton" type="TextureButton" parent="."]
offset_left = 392.0
offset_top = 1096.0
offset_right = 697.0
offset_bottom = 1253.0
action_mode = 0
shortcut = ExtResource("9")
texture_normal = ExtResource("4")

[node name="EndTurnButton" type="TextureButton" parent="."]
offset_left = 392.0
offset_top = 1096.0
offset_right = 432.0
offset_bottom = 1136.0
action_mode = 0
shortcut = ExtResource("9")
texture_normal = ExtResource("8")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("1")
initial_state = NodePath("PlayerState")

[node name="PlayerState" type="Node" parent="StateMachine"]
script = ExtResource("2")

[node name="Bot1State" type="Node" parent="StateMachine"]
script = ExtResource("10")

[node name="Bot2State" type="Node" parent="StateMachine"]
script = ExtResource("11")

[node name="Dice1" parent="." instance=ExtResource("6")]
offset_left = 248.0
offset_top = 832.0
offset_right = 353.0
offset_bottom = 996.0

[node name="Dice2" parent="." instance=ExtResource("6")]
offset_left = 728.0
offset_top = 840.0
offset_right = 833.0
offset_bottom = 1004.0

[node name="ActiveParticipant" parent="." instance=ExtResource("3")]

[node name="Hand" type="Node2D" parent="ActiveParticipant"]
position = Vector2(16, 1360)

[connection signal="pressed" from="RollButton" to="." method="_on_RollButton_pressed"]
[connection signal="pressed" from="EndTurnButton" to="StateMachine/PlayerState" method="_on_EndTurnButton_pressed"]
[connection signal="renamed" from="ActiveParticipant" to="." method="_on_Participant_renamed"]
